# rara-bdd

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml
.claude/skills/: bdd-design.md  bdd-implement.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  lint.yml  rust.yml
docs/: agent-workflow.md  architecture.md  cli.md  eval-dsl.md  integration.md
src/: discovery.rs  error.rs  generate.rs  harness.rs  lib.rs  main.rs  matcher.rs  runner.rs  setup.rs  step_coverage.rs  traceability.rs
src/cli/: mod.rs
src/evaluator/: loader.rs  mod.rs  quality.rs  runtime.rs  source.rs
src/reporter/: json.rs  markdown.rs  mod.rs  terminal.rs
tests/: cli_test.rs
tests/common/: mod.rs
