[package]
name = "rara-bdd"
version = "0.3.0"
edition = "2024"
description = "Cucumber-rs scaffolding tool for AI agents — generates step definitions from Gherkin features"
license = "MIT"
repository = "https://github.com/rararulab/rara-bdd"

[[bin]]
name = "rara-bdd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
cucumber = { version = "0.22", default-features = false, features = ["output-json"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.9"
toml_edit = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
